<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#E0F7FA"
    android:padding="30dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitness_companion"
        android:textColor="#00796B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnWorkoutTracker"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/workout_tracker"
        android:backgroundTint="#00796B"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:elevation="6dp" />

    <Button
        android:id="@+id/btnBMICalculator"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/bmi_calculator"
        android:backgroundTint="#00796B"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:elevation="6dp" />

    <Button
        android:id="@+id/btnCaloriesCalculator"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/calories_calculator"
        android:backgroundTint="#00796B"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:elevation="6dp" />

    <Button
        android:id="@+id/btnMacrosCalculator"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/macros_calculator"
        android:backgroundTint="#00796B"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:elevation="6dp" />
</LinearLayout>
