<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F7FA"
    android:padding="20dp">

    <TextView
        android:id="@+id/gymTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_muscle_group"
        android:textColor="#00796B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/muscleGroupRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/gymTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioChest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chest"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioBiceps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biceps"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioTriceps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triceps"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioLegs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legs"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioShoulders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoulders"
            android:textColor="@color/black"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnShowGymWorkouts"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/show_workouts"
        android:backgroundTint="#00796B"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:elevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/muscleGroupRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <ListView
        android:id="@+id/gymListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnShowGymWorkouts"
        android:dividerHeight="1dp"
        android:divider="#00796B" />
</androidx.constraintlayout.widget.ConstraintLayout>
