<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E0F7FA"
    android:padding="20dp">

    <TextView
        android:id="@+id/caloriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_calculator"
        android:textColor="#00796B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:textColorHint="#757575"
        android:textColor="@color/black"
        android:inputType="number"
        android:padding="12dp"
        android:backgroundTint="#00796B"
        app:layout_constraintTop_toBottomOf="@id/caloriesTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight_kg"
        android:textColorHint="#757575"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:backgroundTint="#00796B"
        app:layout_constraintTop_toBottomOf="@id/ageInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height_cm"
        android:textColorHint="#757575"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:backgroundTint="#00796B"
        app:layout_constraintTop_toBottomOf="@id/weightInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/heightInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/black"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/black" />
    </RadioGroup>

    <Spinner
        android:id="@+id/activityLevelSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />

    <Button
        android:id="@+id/calculateCaloriesButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_calories"
        android:backgroundTint="#00796B"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:elevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/activityLevelSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/caloriesResultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="#00796B"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/calculateCaloriesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
